[package]
authors                                 = ["Mikhail Solovev <icee@icee.ru>"]
categories                              = ["api-bindings", "parser-implementations"]
description                             = "High-level bindings for the LibYAML library"
documentation                           = "https://docs.rs/libyaml"
edition                                 = "2018"
homepage                                = "https://github.com/fatemender/libyaml-rs"
keywords                                = ["libyaml", "yaml"]
license                                 = "MIT"
name                                    = "libyaml"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/libyaml-rs"
version                                 = "0.2.0"

[features]

[dependencies]
unsafe-libyaml                          = "0.2.2"
